# debrid

./: Cargo.toml
.github/workflows/: rust.yml
src/: consts.rs  debrid.rs  error.rs  lib.rs
src/apis/: downloads.rs  hosts.rs  mod.rs  root.rs  settings.rs  streaming.rs  torrents.rs  traffic.rs  unrestrict.rs  user.rs
src/de/: bool.rs  hashmap_or_array_to_hashmap.rs  mod.rs
src/models/: downloads.rs  error.rs  hosts.rs  mod.rs  settings.rs  streaming.rs  torrents.rs  traffic.rs  unrestrict.rs  user.rs
tests/: mocked.rs  mod.rs
tests/.resources/downloads/: index.json
tests/.resources/hosts/: domains.json  index.json  regex.json  regex_folder.json  status.json
tests/.resources/settings/: index.json
tests/.resources/streaming/: media_infos.json  transcode.json
tests/.resources/torrents/: active_count.json  added_torrent.json  available_hosts.json  index.json  info.json  (+1 more)
tests/downloads/: delete.rs  get.rs  len.rs  mod.rs
tests/hosts/: domains.rs  get.rs  mod.rs  regex.rs  regex_folder.rs  status.rs
tests/root/: disable_access_token.rs  mod.rs  time.rs  time_iso.rs
tests/settings/: change_password.rs  convert_points.rs  delete_avatar.rs  get.rs  mod.rs  set_avatar.rs  update.rs
tests/streaming/: media_info.rs  mod.rs  transcode.rs
tests/torrents/: active_count.rs  add_magnet.rs  add_torrent.rs  available_hosts.rs  get.rs  info.rs  instant_availability.rs  len.rs  mod.rs
tests/traffic/: details.rs  get.rs  mod.rs
tests/unrestrict/: check.rs  container_file.rs  container_link.rs  folder.rs  link.rs  mod.rs
tests/user/: mod.rs  user_get.rs
(+6 files in other folders)
