[package]
name = "debrid"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "2.3.0"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
futures = "0.3.30"
tokio-util = { version = "0.7.12", features = ["codec"] }
serde_json = "1.0.128"
regex = "1.10.6"

[dev-dependencies]
anyhow = "1.0.89"
wiremock = "0.6.2"
